base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx5
  namespace: hpapoc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx5
  template:
    metadata:
      labels:
        app: nginx4
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 10m
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
