base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx5
  namespace: hpapoc
spec:
  selector:
    app: nginx5
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
